documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32VB.BAS

Public Declare Function PC708_BCSchedRetry Lib "P71W32.DLL" Alias "_PC708_BCSchedRetry@12" (ByVal condition As Integer, ByVal retries As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_BCSchedRetryEx Lib "P71W32.DLL" Alias "_PC708_BCSchedRetryEx@24" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal retryflag As Integer, ByVal retries As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_BCSchedReturn Lib "P71W32.DLL" Alias "_PC708_BCSchedReturn@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_BCSchedUser Lib "P71W32.DLL" Alias "_PC708_BCSchedUser@8" (ByVal useraddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_BCSetEntry Lib "P71W32.DLL" Alias "_PC708_BCSetEntry@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_BCSetTimeout Lib "P71W32.DLL" Alias "_PC708_BCSetTimeout@8" (ByVal timeoutval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_BlkAddr Lib "P71W32.DLL" Alias "_PC708_BlkAddr@8" (ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_BlkOptRd Lib "P71W32.DLL" Alias "_PC708_BlkOptRd@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_BlkOptWr Lib "P71W32.DLL" Alias "_PC708_BlkOptWr@12" (ByVal rtopt As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_BlkPtrRd Lib "P71W32.DLL" Alias "_PC708_BlkPtrRd@8" (ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_BlkPtrWr Lib "P71W32.DLL" Alias "_PC708_BlkPtrWr@12" (ByVal descaddr As Long, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_BlkRd Lib "P71W32.DLL" Alias "_PC708_BlkRd@12" (ByRef block As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_BlkReset Lib "P71W32.DLL" Alias "_PC708_BlkReset@8" (ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_BlkSWDRd Lib "P71W32.DLL" Alias "_PC708_BlkSWDRd@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_BlkSWDWr Lib "P71W32.DLL" Alias "_PC708_BlkSWDWr@12" (ByVal swdval As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_BlkWipe Lib "P71W32.DLL" Alias "_PC708_BlkWipe@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_BlkWr Lib "P71W32.DLL" Alias "_PC708_BlkWr@12" (ByRef block As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CardBoot Lib "P71W32.DLL" Alias "_PC708_CardBoot@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CardCloseAll Lib "P71W32.DLL" Alias "_PC708_CardCloseAll@0" () As Long
Public Declare Function PC708_CardConfig Lib "P71W32.DLL" Alias "_PC708_CardConfig@16" (ByVal enableflag As Long, ByVal command As Integer, ByVal taval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CardGetInfo Lib "P71W32.DLL" Alias "_PC708_CardGetInfo@8" (ByVal infotype As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CardGetInfoEx Lib "P71W32.DLL" Alias "_PC708_CardGetInfoEx@20" (ByRef bufmodel As Integer, ByVal bufmodelcount As Integer, ByRef buffeature As Integer, ByVal buffeaturecount As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CardInit Lib "P71W32.DLL" Alias "_PC708_CardInit@0" () As Long
Public Declare Function PC708_CardIsRunning Lib "P71W32.DLL" Alias "_PC708_CardIsRunning@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CardNop Lib "P71W32.DLL" Alias "_PC708_CardNop@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CardOpenEx Lib "P71W32.DLL" Alias "_PC708_CardOpenEx@20" (ByRef cardname As String, ByVal memval As Long, ByVal ioval As Integer, ByVal irqval As Integer, ByVal drqval As Integer) As Long
Public Declare Function PC708_CardOpenExx Lib "P71W32.DLL" Alias "_PC708_CardOpenExx@28" (ByRef cardname As String, ByVal memval As Long, ByVal ioval As Integer, ByVal irqval As Integer, ByVal drqval As Integer, ByRef happwnd As Long, ByVal uiremovalmsg As Integer) As Long
Public Declare Function PC708_CardResetEx Lib "P71W32.DLL" Alias "_PC708_CardResetEx@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CardResume Lib "P71W32.DLL" Alias "_PC708_CardResume@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CardTest Lib "P71W32.DLL" Alias "_PC708_CardTest@8" (ByVal level As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CardTest0 Lib "P71W32.DLL" Alias "_PC708_CardTest0@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CardTest1 Lib "P71W32.DLL" Alias "_PC708_CardTest1@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CardTest2 Lib "P71W32.DLL" Alias "_PC708_CardTest2@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CardTrigger Lib "P71W32.DLL" Alias "_PC708_CardTrigger@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CmdAddr Lib "P71W32.DLL" Alias "_PC708_CmdAddr@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdAlloc Lib "P71W32.DLL" Alias "_PC708_CmdAlloc@8" (ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdBaseRd Lib "P71W32.DLL" Alias "_PC708_CmdBaseRd@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CmdBaseWr Lib "P71W32.DLL" Alias "_PC708_CmdBaseWr@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdClear Lib "P71W32.DLL" Alias "_PC708_CmdClear@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CmdCountRd Lib "P71W32.DLL" Alias "_PC708_CmdCountRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_CmdCountWr Lib "P71W32.DLL" Alias "_PC708_CmdCountWr@8" (ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdCtrlRd Lib "P71W32.DLL" Alias "_PC708_CmdCtrlRd@8" (ByVal index As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_CmdCtrlWr Lib "P71W32.DLL" Alias "_PC708_CmdCtrlWr@12" (ByVal ctrlval As Integer, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdCurrRd Lib "P71W32.DLL" Alias "_PC708_CmdCurrRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_CmdCurrWr Lib "P71W32.DLL" Alias "_PC708_CmdCurrWr@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdInit Lib "P71W32.DLL" Alias "_PC708_CmdInit@8" (ByVal opcode As Integer, ByRef block As Integer) As Long
Public Declare Function PC708_CmdInsert Lib "P71W32.DLL" Alias "_PC708_CmdInsert@8" (ByRef block As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdMaxRd Lib "P71W32.DLL" Alias "_PC708_CmdMaxRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_CmdMaxWr Lib "P71W32.DLL" Alias "_PC708_CmdMaxWr@8" (ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdRd Lib "P71W32.DLL" Alias "_PC708_CmdRd@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdSkipWr Lib "P71W32.DLL" Alias "_PC708_CmdSkipWr@12" (ByVal value As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdStackClr Lib "P71W32.DLL" Alias "_PC708_CmdStackClr@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CmdStartRd Lib "P71W32.DLL" Alias "_PC708_CmdStartRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_CmdStartWr Lib "P71W32.DLL" Alias "_PC708_CmdStartWr@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdTotalRd Lib "P71W32.DLL" Alias "_PC708_CmdTotalRd@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CmdTotalWr Lib "P71W32.DLL" Alias "_PC708_CmdTotalWr@8" (ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CmdWr Lib "P71W32.DLL" Alias "_PC708_CmdWr@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CommCall Lib "P71W32.DLL" Alias "_PC708_CommCall@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CommCheck Lib "P71W32.DLL" Alias "_PC708_CommCheck@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CommDisable Lib "P71W32.DLL" Alias "_PC708_CommDisable@8" (ByVal command As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CommEnable Lib "P71W32.DLL" Alias "_PC708_CommEnable@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_CommRdL Lib "P71W32.DLL" Alias "_PC708_CommRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CommRdsW Lib "P71W32.DLL" Alias "_PC708_CommRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CommRdW Lib "P71W32.DLL" Alias "_PC708_CommRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_CommRun Lib "P71W32.DLL" Alias "_PC708_CommRun@20" (ByRef dataptr As Integer, ByVal datacount As Integer, ByRef codeptr As Integer, ByVal codecount As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CommWrL Lib "P71W32.DLL" Alias "_PC708_CommWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_CommWrsW Lib "P71W32.DLL" Alias "_PC708_CommWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_CommWrW Lib "P71W32.DLL" Alias "_PC708_CommWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_DARClr Lib "P71W32.DLL" Alias "_PC708_DARClr@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_DARGet Lib "P71W32.DLL" Alias "_PC708_DARGet@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_DARRdL Lib "P71W32.DLL" Alias "_PC708_DARRdL@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_DARRdW Lib "P71W32.DLL" Alias "_PC708_DARRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function PC708_DARSet Lib "P71W32.DLL" Alias "_PC708_DARSet@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_DARWrL Lib "P71W32.DLL" Alias "_PC708_DARWrL@12" (ByVal value As Long, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_DARWrW Lib "P71W32.DLL" Alias "_PC708_DARWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_Div Lib "P71W32.DLL" Alias "_PC708_Div@8" (ByVal diva As Long, ByVal divb As Long) As Long
Public Declare Function PC708_DllUsageCount Lib "P71W32.DLL" Alias "_PC708_DllUsageCount@0" () As Long
Public Declare Function PC708_DspBioRd Lib "P71W32.DLL" Alias "_PC708_DspBioRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_DspIntfClear Lib "P71W32.DLL" Alias "_PC708_DspIntfClear@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_DspIntfRead Lib "P71W32.DLL" Alias "_PC708_DspIntfRead@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_DspIntmClear Lib "P71W32.DLL" Alias "_PC708_DspIntmClear@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_DspIntmSet Lib "P71W32.DLL" Alias "_PC708_DspIntmSet@4" (ByVal handleval As Long) As Long
